# ansible-chatbot-stack

./: ansible-chatbot-run.yaml  ansible-chatbot-system-prompt.txt  lightspeed-stack_local.yaml  pyproject.toml
