[project]
name = "ansible-chatbot-stack"
version = "0.1.0"
description = "Ansible Lightspeed Intelligent Assistant (ALIA)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite~=0.21.0",
    "authlib>=1.6.1",
    "faiss-cpu~=1.11.0",
    "fire~=0.7.0",
    "lightspeed-stack-providers==0.1.13",
    "litellm==1.74.2",
    "llama-stack==0.2.16",
    "mcp~=1.9.4",
    "numpy==2.2.6",
    "opentelemetry-api~=1.34.1",
    "opentelemetry-exporter-otlp~=1.34.1",
    "prometheus-client>=0.22.1",
    "sentence-transformers>=5.0.0",
    "sqlalchemy~=2.0.41",
]

[dependency-groups]
dev = [
    "cachetools>=6.1.0",
    "kubernetes>=33.1.0",
]
